--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   hiveos:
     image: hiveos
     container_name: hiveos
-    restart: always
+    restart: 'unless-stopped'
     volumes:
     - ./:/hiveos/
 #     networks: 
